<resources>
    <string name="app_name">Health Companion</string>
    <string name="app_version">Version 1.0</string>

    <string name="welcome">Health Companion</string>
    <string name="login_with_fitbit">Login with Fitbit</string>
    <string name="fitbit_logo_description">Fitbit Logo</string>

    <string name="login_title">Login</string>
    <string name="missing_scopes_error">Error logging in. Missing the following required scopes: </string>
    <string name="login_dismissed">Login Dismissed</string>

    <string name="stats">Your Health Data</string>
    <string name="plan">Exercise Plan</string>
    <string name="about">About</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_refresh">Refresh</string>
    <string name="action_logout">Logout</string>

    <string name="presented_by_cascade_lab">Presented by\n \n Cascade Lab \n University of Illinois at Urbana-Champaign</string>

    <string name="error_loading_data">Error loading data. Check your internet connection and try again later.</string>
</resources>
