<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_stats"
            android:icon="@drawable/ic_menu_stats"
            android:title="@string/stats" />
        <item
            android:id="@+id/nav_plan"
            android:icon="@drawable/ic_menu_plan"
            android:title="@string/plan" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_menu_about"
            android:title="@string/about" />
        <!--<item-->
            <!--android:id="@+id/nav_manage"-->
            <!--android:icon="@drawable/ic_menu_manage"-->
            <!--android:title="Tools" />-->
    </group>

    <item android:title="Account">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_menu_logout"
                android:title="@string/logout" />
        </menu>
    </item>

</menu>
