<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.health_companion_uiuc_mobile.AboutFragment"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="80dp"
        android:fontFamily="cursive"
        android:gravity="center_horizontal"
        android:text="@string/app_name"
        android:textSize="30sp">

    </TextView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="150dp"
        android:gravity="center_horizontal"
        android:text="@string/app_version">

    </TextView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center_horizontal"
        android:text="@string/presented_by_cascade_lab">

    </TextView>

</LinearLayout>
